--- a/index.html
+++ b/index.html
@@ -3,9 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Home</title>
     <link rel="stylesheet" href="css/global.css" />
     <link rel="stylesheet" href="./css/index.css" />
   </head>
-  <body></body>
+  <body>
+    <main>
+      <div class="nav-bar">
+        <a href="index.html">Home</a>
+        <a href="">About</a>
+        <a href="">Services</a>
+        <a href="">Contact</a>
+      </div>
+      <div class="title">
+        <h1>HOME PAGE</h1>
+      </div>
+      <button class="btn btn--primary">Learn More</button>
+      <button class="btn btn--secondary">Contact Us</button>
+    </main>
+  </body>
 </html>
